force-app/main/default/objects/Distribution_Rule__c/Distribution_Rule__c.object-meta.xml
<CustomObject>
    <description>Used to configure distribution of records to queuemembers</description>
    <label>Distribution Rule</label>
    <nameField>
        <label>Distribution Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>