force-app/main/default/objects/Distribution_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this distribution rule be considered in distributor automation?</description>
    <inlineHelpText>Should this distribution rule be considered in distributor automation?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>