force-app/main/default/objects/Distribution_Rule__c/fields/Daily_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Cap__c</fullName>
    <description>How many records can be distributed per day to each individual? Empty means unlimited.</description>
    <inlineHelpText>How many records can be distributed per day to each individual? Empty means unlimited.</inlineHelpText>
    <label>Daily Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>