force-app/main/default/objects/Distribution_Rule__c/fields/Distribution_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Source_Id__c</fullName>
    <description>Id of Queue or User from which records will be distributed. Records will be distributed to the members of this queue. (18 char)</description>
    <inlineHelpText>Id of Queue or User from which records will be distributed. Records will be distributed to the members of this queue. (18 char)</inlineHelpText>
    <label>Distribution Source Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>