force-app/main/default/objects/Distribution_Rule__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Queue from which records will be distributed from. Records will be distributed to the members of this queue.</description>
    <inlineHelpText>Queue from which records will be distributed from. Records will be distributed to the members of this queue.</inlineHelpText>
    <label>Queue</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>